--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,11 @@ input { min-width: 10em; }
 h1 { margin: 0; }
 
 .align-right { float: right; }
-.w-75 { width: 75%; }
-.m-b { margin: 0 0 1em 0; }
-.m-b-2 { margin: 0 0 2em 0; }
+.w-75 	{ width: 75%; }
+.m-b 	{ margin: 0 0 1em 0; }
+.m-b-2 	{ margin: 0 0 2em 0; }
+.m-b-3 	{ margin: 0 0 4em 0; }
+.m-b-5 	{ margin: 0 0 5em 0; }
 .pad {
     padding: 2em;
     font-size: .75;
@@ -30,8 +32,40 @@ h1 { margin: 0; }
     opacity: .2;
 }
 
-#input-speed {
-    width: 100%;
+.ctr-speed-container {
+	position: relative;
+	display: inline-block;
+	margin-right: .4em;
+}
+
+.label-speed{
+	position: absolute;
+	top: 2em;
+	left: 0;
+	width: 100%;
+	text-align: center;
+}
+
+#ico-speed {
+	position: relative;
+	width: 93%;
+}
+
+#input-forward {
+//	font-size: .9em;
+}
+
+.ico-direction {
+	position: relative;
+	z-index: 5;
+}
+
+#ico-pause {
+	text-align: center;
+	position: absolute;
+	display: block;
+	top: 0;
+	width: 100%;
 }
 
 #input-check {
